public class Gueterwagon {
}
