public class Personenwagon {
}
