public class Wagon {
}
